Modificaciones demo día 2

--- a/demos/demo-dia-2.ipynb
+++ b/demos/demo-dia-2.ipynb
@@ -271,8 +271,8 @@
    ],
    "source": [
     "#visualizamos nuestra informacion\n",
-    "#los colores de los puntos indican si ese alumno en particular paso o no\n",
-    "plt.scatter(dfAlumnos.sesionesAsistidas,dfAlumnos.horasInvertidas,c = dfAlumnos.aprobo )"
+    "#los colores de los puntos indican si ese alumno en particular pasó o no\n",
+    "plt.scatter(dfAlumnos.sesionesAsistidas,dfAlumnos.horasInvertidas,c = dfAlumnos.aprobo)"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "source": [
     "clasificadorModel.compile(\n",
     "   optimizer = optimizador,\n",
-    "   loss = 'binary_crossentropy',#la funcion de perdidam, en este caso binary_crossentropy debido a ques es una clasificacion de 0 o 1\n",
+    "   loss = 'binary_crossentropy',#la funcion de perdida, en este caso binary_crossentropy debido a ques es una clasificacion de 0 o 1\n",
     "   metrics = ['accuracy'] #metricas que queremos obtener en el entrenamiento, en este caso presición\n",
     ")"
    ]
