Ortografía reto3 demo3

--- a/demos/demo-dia-3.ipynb
+++ b/demos/demo-dia-3.ipynb
@@ -3179,7 +3179,7 @@
         "### Reto 3\n",
         "\n",
         "Has decido invertir en una empresa de tecnología, tus opciones son Nvidia, Microsoft, Google.\n",
-        "* ¿Qué accion a aumentado más su costo en el ultimo año?"
+        "* ¿Qué acción a aumentado más su costo en el último año?"
       ]
     },
     {
@@ -3212,8 +3212,15 @@
       "metadata": {},
       "source": [
         "* Grafica un boxplot con los datos de las acciones de julio 2024 de las tres firmas.\n",
-        "¿Cuál es la accion con mayor dispersión en su valor?"
+        "¿Cuál es la acción con mayor dispersión en su valor?"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
