--- a/code/BigData_BLOQUE_Sesión_7.ipynb
+++ b/code/BigData_BLOQUE_Sesión_7.ipynb
@@ -42,7 +42,7 @@
       },
       "source": [
         "# Curso de capacitación en Análisis de Datos y Big Data\n",
-        "### Día 6 - Aprendizaje supervisado y Pyspark\n",
+        "### Día 7 - Aprendizaje supervisado y regresiones\n",
         "\n",
         "##### Autor: Ulises Olivares\n",
         "##### uolivares@unam.mx\n",
